added popular results and watch providers